crates/usd-wasm/tests/snapshots/fixtures__fixtures@display_color.usda.snap
---
source: crates/usd-wasm/tests/fixtures.rs
expression: "out.replace(&dir, \"\")"
input_file: fixtures/display_color.usda
---
upAxis Y, metersPerUnit 0.01
prims 2, meshes 2, triangles 2

instances:
  /Vertex: geometry 0, material 0
    at (0, 0, 0), world (0, 0, 0)..(1, 1, 0)
  /Constant: geometry 1, material 1
    at (0, 0, 0), world (0, 0, 0)..(1, 1, 0)

geometries:
  0 /Vertex: 1 triangles (all outward), 3 vertices, bounds (0, 0, 0)..(1, 1, 0)
    normals (0, 0, 1) x3
    colors (1, 0, 0), (0, 1, 0), (0, 0, 1)
  1 /Constant: 1 triangles (all outward), 3 vertices, bounds (0, 0, 0)..(1, 1, 0)
    normals (0, 0, 1) x3

materials:
  0 (unbound) displayColor: color (1, 1, 1), opacity 1, roughness 0.5, metallic 0, color from primvar displayColor
  1 (unbound) displayColor: color (0.5, 0.25, 1), opacity 1, roughness 0.5, metallic 0
