crates/usd-wasm/tests/snapshots/fixtures__fixtures@implicit_gprims.usda.snap
---
source: crates/usd-wasm/tests/fixtures.rs
expression: "out.replace(&dir, \"\")"
input_file: fixtures/implicit_gprims.usda
---
upAxis Z, metersPerUnit 0.01
prims 17, meshes 11, triangles 3304
skipped /Hidden (invisible)
skipped /Guide (purpose)

instances:
  /Shapes/Cube: geometry 0, material 0
    at (0, 0, 0), world (-2.376, -2.135, -2.51)..(2.376, 2.135, 2.51)
  /Shapes/Sphere: geometry 1, material 0
    at (4.178, 0.737, -4.243), world (1.01, -2.11, -7.589)..(7.346, 3.583, -0.897)
  /Shapes/CylinderX: geometry 2, material 0
    at (0, 0, 0), world (-1.837, -0.896, -1.897)..(1.837, 0.896, 1.897)
  /Shapes/CylinderY: geometry 3, material 0
    at (1.187, 5.486, 2.121), world (-0.397, 4.062, 0.448)..(2.771, 6.909, 3.794)
  /Shapes/Cone: geometry 4, material 0
    at (0, 0, 0), world (-2.155, -3.217, -2.581)..(2.155, 3.217, 2.581)
  /Shapes/CapsuleY: geometry 5, material 0
    at (0, 0, 0), world (-1.386, -1.982, -1.608)..(1.386, 1.982, 1.608)
  /Shapes/PlaneX: geometry 6, material 0 double-sided
    at (0, 0, 0), world (-1.184, -2.672, -1.496)..(1.184, 2.672, 1.496)
  /Shapes/PlaneY: geometry 7, material 0 double-sided
    at (0, 0, 0), world (-1.389, -0.377, -1.367)..(1.389, 0.377, 1.367)
  /Tinted: geometry 8, material 2
    at (0, 0, 10), world (-1, -1, 9)..(1, 1, 11)
  /Instancer/Protos/Box[0]: geometry 9, material 3
    at (0, -8, 0), world (-1, -9, -1)..(1, -7, 1)
  /Instancer/Protos/Box[1]: geometry 9, material 3
    at (4, -8, 0), world (3, -9.414, -1.414)..(5, -6.586, 1.414)

geometries:
  0 /Shapes/Cube: 12 triangles (all outward), 24 vertices, bounds (-1.5, -1.5, -1.5)..(1.5, 1.5, 1.5)
    normals (1, 0, 0) x4, (-1, 0, 0) x4, (0, 1, 0) x4, (0, -1, 0) x4, (0, 0, 1) x4, (0, 0, -1) x4
  1 /Shapes/Sphere: 960 triangles (all outward), 544 vertices, bounds (-2, -2, -2)..(2, 2, 2)
    normals of more than 6 distinct values
  2 /Shapes/CylinderX: 128 triangles (all outward), 192 vertices, bounds (-2, -0.5, -0.5)..(2, 0.5, 0.5)
    normals of more than 6 distinct values
  3 /Shapes/CylinderY: 128 triangles (all outward), 192 vertices, bounds (-1, -1, -1)..(1, 1, 1)
    normals of more than 6 distinct values
  4 /Shapes/Cone: 64 triangles (all outward), 128 vertices, bounds (-1.5, -1.5, -1.5)..(1.5, 1.5, 1.5)
    normals of more than 6 distinct values
  5 /Shapes/CapsuleY: 1024 triangles (all outward), 576 vertices, bounds (-0.75, -1.75, -0.75)..(0.75, 1.75, 0.75)
    normals of more than 6 distinct values
  6 /Shapes/PlaneX: 2 triangles (all outward), 4 vertices, bounds (0, -2.5, -1)..(0, 2.5, 1)
    normals (1, 0, 0) x4
  7 /Shapes/PlaneY: 2 triangles (all outward), 4 vertices, bounds (-1.5, 0, -0.5)..(1.5, 0, 0.5)
    normals (0, 1, 0) x4
  8 /Tinted: 960 triangles (all outward), 544 vertices, bounds (-1, -1, -1)..(1, 1, 1)
    normals of more than 6 distinct values
  9 /Instancer/Protos/Box: 12 triangles (all outward), 24 vertices, bounds (-1, -1, -1)..(1, 1, 1)
    normals (1, 0, 0) x4, (-1, 0, 0) x4, (0, 1, 0) x4, (0, -1, 0) x4, (0, 0, 1) x4, (0, 0, -1) x4

materials:
  0 /Red preview: color (1, 0, 0), opacity 1, roughness 0.5, metallic 0
  1 (unbound) displayColor: color (1, 1, 1), opacity 1, roughness 0.5, metallic 0, color from primvar displayColor
  2 (unbound) displayColor: color (0, 1, 0), opacity 1, roughness 0.5, metallic 0
  3 (unbound) fallback: color (0.7, 0.7, 0.7), opacity 1, roughness 0.5, metallic 0
