crates/usd-wasm/tests/snapshots/fixtures__fixtures@instancer_empty.usda.snap
---
source: crates/usd-wasm/tests/fixtures.rs
expression: "out.replace(&dir, \"\")"
input_file: fixtures/instancer_empty.usda
---
upAxis Y, metersPerUnit 0.01
prims 2, meshes 0, triangles 0

instances:

geometries:
  0 /I/A: 1 triangles (all outward), 3 vertices, bounds (0, 0, 0)..(1, 1, 0)
    normals (0, 0, 1) x3

materials:
  0 (unbound) displayColor: color (1, 1, 1), opacity 1, roughness 0.5, metallic 0, color from primvar displayColor
  1 (unbound) fallback: color (0.7, 0.7, 0.7), opacity 1, roughness 0.5, metallic 0
