crates/usd-wasm/tests/snapshots/fixtures__fixtures@instancer_unused.usda.snap
---
source: crates/usd-wasm/tests/fixtures.rs
expression: "out.replace(&dir, \"\")"
input_file: fixtures/instancer_unused.usda
---
upAxis Y, metersPerUnit 0.01
prims 3, meshes 1, triangles 1

instances:
  /I/A[0]: geometry 0, material 1
    at (10, 0, 0), world (10, 0, 0)..(11, 1, 0)

geometries:
  0 /I/A: 1 triangles (all outward), 3 vertices, bounds (0, 0, 0)..(1, 1, 0)
    normals (0, 0, 1) x3
  1 /I/B: 1 triangles (all outward), 3 vertices, bounds (0, 0, 0)..(1, 1, 0)
    normals (0, 0, 1) x3

materials:
  0 (unbound) displayColor: color (1, 1, 1), opacity 1, roughness 0.5, metallic 0, color from primvar displayColor
  1 (unbound) fallback: color (0.7, 0.7, 0.7), opacity 1, roughness 0.5, metallic 0
