crates/usd-wasm/tests/snapshots/fixtures__fixtures@materialx_only.usda.snap
---
source: crates/usd-wasm/tests/fixtures.rs
expression: "out.replace(&dir, \"\")"
input_file: fixtures/materialx_only.usda
---
upAxis Y, metersPerUnit 0.01
prims 4, meshes 1, triangles 1

instances:
  /Tri: geometry 0, material 0
    at (0, 0, 0), world (0, 0, 0)..(1, 1, 0)

geometries:
  0 /Tri: 1 triangles (all outward), 3 vertices, bounds (0, 0, 0)..(1, 1, 0)
    normals (0, 0, 1) x3

materials:
  0 /Mat fallback: color (0.7, 0.7, 0.7), opacity 1, roughness 0.5, metallic 0

warnings:
  material-fallback: 1 material(s) have no UsdPreviewSurface or readable MDL and show as grey (/Mat)
  composition: unresolved Reference layer @library.mtlx@ at /Library
