crates/usd-wasm/tests/snapshots/fixtures__fixtures@meshes.usda.snap
---
source: crates/usd-wasm/tests/fixtures.rs
expression: "out.replace(&dir, \"\")"
input_file: fixtures/meshes.usda
---
upAxis Y, metersPerUnit 0.01
prims 6, meshes 6, triangles 22

instances:
  /Hole: geometry 0, material 1
    at (0, 0, 0), world (0, 0, 0)..(2, 1, 0)
  /ConstantUv: geometry 1, material 1
    at (0, 0, 0), world (0, 0, 0)..(2, 1, 0)
  /Faceted: geometry 2, material 1
    at (0, 0, 0), world (0, 0, -1)..(1, 1, 0)
  /Smooth: geometry 3, material 1
    at (0, 0, 0), world (0, 0, -1)..(1, 1, 0)
  /ConstantNormals: geometry 4, material 1
    at (0, 0, 0), world (0, 0, -1)..(1, 1, 0)
  /VertexNormals: geometry 5, material 1
    at (0, 0, 0), world (0, 0, 0)..(2, 1, 0)

geometries:
  0 /Hole: 2 triangles (all outward), 6 vertices, bounds (0, 0, 0)..(2, 1, 0)
    normals (0, 0, 1) x6
  1 /ConstantUv: 4 triangles (all outward), 6 vertices, bounds (0, 0, 0)..(2, 1, 0)
    normals (0, 0, 1) x6
    uv st (0.25, 0.75) x6
  2 /Faceted: 4 triangles (all outward), 8 vertices, bounds (0, 0, -1)..(1, 1, 0)
    normals (0, 0, 1) x4, (1, 0, 0) x4
  3 /Smooth: 4 triangles (all outward), 6 vertices, bounds (0, 0, -1)..(1, 1, 0)
    normals (0, 0, 1) x2, (0.707, 0, 0.707) x2, (1, 0, 0) x2
  4 /ConstantNormals: 4 triangles (all outward), 6 vertices, bounds (0, 0, -1)..(1, 1, 0)
    normals (0, 1, 0) x6
  5 /VertexNormals: 4 triangles (all outward), 6 vertices, bounds (0, 0, 0)..(2, 1, 0)
    normals (0, 0, 1) x4, (0, 1, 0) x2

materials:
  0 (unbound) displayColor: color (1, 1, 1), opacity 1, roughness 0.5, metallic 0, color from primvar displayColor
  1 (unbound) fallback: color (0.7, 0.7, 0.7), opacity 1, roughness 0.5, metallic 0
