crates/usd-wasm/tests/snapshots/fixtures__fixtures@missing_sublayer.usda.snap
---
source: crates/usd-wasm/tests/fixtures.rs
expression: "out.replace(&dir, \"\")"
input_file: fixtures/missing_sublayer.usda
---
upAxis Y, metersPerUnit 0.01
prims 1, meshes 1, triangles 1

instances:
  /Tri: geometry 0, material 1
    at (0, 0, 0), world (0, 0, 0)..(1, 1, 0)

geometries:
  0 /Tri: 1 triangles (all outward), 3 vertices, bounds (0, 0, 0)..(1, 1, 0)
    normals (0, 0, 1) x3

materials:
  0 (unbound) displayColor: color (1, 1, 1), opacity 1, roughness 0.5, metallic 0, color from primvar displayColor
  1 (unbound) fallback: color (0.7, 0.7, 0.7), opacity 1, roughness 0.5, metallic 0

warnings:
  composition: unresolved sublayer @./missing.usda@ introduced by @missing_sublayer.usda@
missing layer: missing.usda
