crates/usd-wasm/tests/snapshots/fixtures__fixtures@nested_instancers.usda.snap
---
source: crates/usd-wasm/tests/fixtures.rs
expression: "out.replace(&dir, \"\")"
input_file: fixtures/nested_instancers.usda
---
upAxis Y, metersPerUnit 0.01
prims 4, meshes 6, triangles 12

instances:
  /Outer/P/Inner/Q[0][0]: geometry 0, material 1
    at (0, 0, 1), world (0, 0, 1)..(1, 1, 1)
  /Outer/P/Inner/Q[0][1]: geometry 0, material 1
    at (0, 5, 1), world (0, 5, 1)..(1, 6, 1)
  /Outer/P/Inner/Q[1][0]: geometry 0, material 1
    at (10, 0, 1), world (10, 0, 1)..(11, 1, 1)
  /Outer/P/Inner/Q[1][1]: geometry 0, material 1
    at (10, 5, 1), world (10, 5, 1)..(11, 6, 1)
  /Outer/P/Inner/Q[2][0]: geometry 0, material 1
    at (20, 0, 1), world (20, 0, 1)..(21, 1, 1)
  /Outer/P/Inner/Q[2][1]: geometry 0, material 1
    at (20, 5, 1), world (20, 5, 1)..(21, 6, 1)

geometries:
  0 /Outer/P/Inner/Q: 2 triangles (all outward), 4 vertices, bounds (0, 0, 0)..(1, 1, 0)
    normals (0, 0, 1) x4

materials:
  0 (unbound) displayColor: color (1, 1, 1), opacity 1, roughness 0.5, metallic 0, color from primvar displayColor
  1 (unbound) fallback: color (0.7, 0.7, 0.7), opacity 1, roughness 0.5, metallic 0
