crates/usd-wasm/tests/snapshots/fixtures__fixtures@point_instancer.usda.snap
---
source: crates/usd-wasm/tests/fixtures.rs
expression: "out.replace(&dir, \"\")"
input_file: fixtures/point_instancer.usda
---
upAxis Y, metersPerUnit 0.01
prims 6, meshes 3, triangles 6

instances:
  /W/I/Protos/A/M[0]: geometry 0, material 1
    at (1, 5, 10), world (1, 5, 10)..(2, 6, 10)
  /W/I/Protos/A/M[1]: geometry 0, material 1
    at (-7.998, 0.002, 10), world (-9.997, 0.002, 10)..(-7.997, 2.002, 10)
  /W/I/Protos/B[2]: geometry 1, material 1
    at (3, 0, 10), world (3, 0, 10)..(4, 1, 10)

geometries:
  0 /W/I/Protos/A/M: 2 triangles (all outward), 4 vertices, bounds (0, 0, 0)..(1, 1, 0)
    normals (0, 0, 1) x4
  1 /W/I/Protos/B: 2 triangles (all outward), 4 vertices, bounds (0, 0, 0)..(1, 1, 0)
    normals (0, 0, 1) x4

materials:
  0 (unbound) displayColor: color (1, 1, 1), opacity 1, roughness 0.5, metallic 0, color from primvar displayColor
  1 (unbound) fallback: color (0.7, 0.7, 0.7), opacity 1, roughness 0.5, metallic 0
